[package]
name = "backend"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-cors = "0.2.0"
actix-http = "1.0"
actix-web = "2.0"
actix-web-actors = "2.0"
actix-web-httpauth = "0.4"
actix-identity = "0.2"
actix-rt = "1.0"
bimap = "0.4"
bytes = "0.5"
chrono = { version = "0.4", features = ["serde"] }
csv = "1.1"
diesel = { version = "1.0.0", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4"
dotenv = "0.9.0"
env_logger = "0.6"
futures = "0.3"
log = "0.4"
lazy_static = "1.4"
paw = "1.0.0"
rand = "0.7"
redis = "0.15"
ring = "0.16"
rusoto_core = "0.43.0-beta.1"
rusoto_s3 = "0.43.0-beta.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
sentry = "0.12.0"
structopt = { version = "0.3.9", features = ["paw"] }
uuid = { version = "0.8", features = ["v4"] }
ws = "0.9"

[package.metadata.deb]
name = "jielabs-backend"
assets = [
	["target/release/backend", "usr/bin/jielabs_backend", "755"],
	["target/release/mock_user", "usr/bin/jielabs_mock_user", "755"],
	["target/release/mock_board", "usr/bin/jielabs_mock_board", "755"],
	["jielabs-backend.service", "lib/systemd/system/", "644"]
]
