[package]
name = "backend"
version = "0.1.0"
authors = ["Jiajie Chen <noc@jiegec.ac.cn>"]
edition = "2018"
default-run = "backend"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-cors = "0.5.4"
actix-http = "2.2.1"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
actix-web-httpauth = "0.5.0"
actix-rt = "1.1.1"
bimap = "0.5.3"
bytes = "0.5"
chrono = { version = "0.4.19", features = ["serde"] }
csv = "1.1.5"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.9.0"
env_logger = "0.8.2"
failure = "0.1.8"
futures = "0.3.13"
log = "0.4.11"
lazy_static = "1.4"
paw = "1.0.0"
rand = "0.8.0"
redis = "0.18.0"
ring = "0.16.19"
rusoto_core = "0.45.0"
rusoto_s3 = "0.45.0"
serde = "1.0.118"
serde_json = "1.0"
serde_derive = "1.0"
sentry = "0.21.0"
structopt = { version = "0.3.21", features = ["paw"] }
uuid = { version = "0.8.1", features = ["v4"] }
ws = "0.9.1"
actix-session = "0.4.0"
reqwest = { version = "0.10.10", features = ["json"] }
hex = "0.4.3"
url = "2.2.1"

[package.metadata.deb]
name = "jielabs-backend"
assets = [
	["target/release/backend", "usr/bin/jielabs_backend", "755"],
	["target/release/mock_user", "usr/bin/jielabs_mock_user", "755"],
	["target/release/mock_board", "usr/bin/jielabs_mock_board", "755"],
	["jielabs-backend.service", "lib/systemd/system/", "644"]
]
section = "web"
