[package]
name = "jielabs_lib"
version = "0.1.0"
authors = ["Liu Xiaoyi <circuitcoder0@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2.80", features = ["serde-serialize"] }
vhdl_lang = "0.17.0"
serde = { version = "1.0.137", features = ["derive"] }
maze-routing = { git = "https://github.com/jiegec/maze-routing" }
verilog-lang = { git = "https://github.com/jiegec/verilog-lang" }

[profile.release]
lto = true
opt-level = 's'
